--- a/templates/base.html
+++ b/templates/base.html
@@ -21,103 +21,80 @@
 {% include 'includes/navbar.html' %}
 
 {% block content %}
-<main class="container">
-    <div class="row">
-        <div class="col-md-9">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3>Title <i class="fa fa-check-square-o"></i></h3>
-                    <h4>Description</h4>
-                    <br/>
-                    <form class="form-horizontal form-inline">
-                        <div class="form-group">
-                            <div id="project-input" class="col-sm-6">
-                                <input id="project-name" type="text" class="form-control"
-                                       placeholder="Rename Your Project">
-                            </div> <!--col-sm-6 -->
-                            <div id="name-button" class="col-sm-1">
-                                <button id="project-name-button" type="submit" class="btn btn-default">Submit</button>
-                            </div> <!-- col-sm-2 -->
-                        </div> <!-- form-group -->
-                    </form>
-                </div> <!--panel-heading -->
-                <div class="panel-body">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr id="headerRow">
-                            <th>List Title</th>
-                            <th>Completed</th>
-                            <th>Update</th>
-                            <th>Remove</th>
-                            <th>Priority</th>
-                            <th>Due Date</th>
-                        </tr>
-                        </thead>
-                        <tbody id="task-list">
-                        <tr>
-                            <td class="task word-td vert-align">Go round mums</td>
-                            <td class=" vert-align">
-                                <button type="button" class="unchecked btn btn-default"><i class="fa fa-check"></i>
-                                </button>
-                            </td>
-                            <td class=" vert-align">
-                                <button type="button" class="btn btn-warning"><i class="fa fa-edit"></i></button>
-                            </td>
-                            <td class=" vert-align">
-                                <button type="button" class="btn btn-danger"><i class="fa fa-trash-o"></i></button>
-                            </td>
-                            <td>Low</td>
-                            <td>24.10.2020</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div> <!-- panel panel-primary -->
-        </div> <!-- col-md-9 -->
-        <div class="col-md-3">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Add New Project</h3>
-                </div>
-                <div class="panel-body">
-                    <table class="table table-striped">
-                        <tbody>
-                        <tr>
-                            <form id="form">
-                                <td>
+    <main class="container">
+        <div class="row">
+            <div class="col-md-9">
+
+                {% for project in projects %}
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3><a href="{{ project.get_absolute_url }}">
+                                {{ project.title }}</a>
+                                <i class="fa fa-check-square-o"></i>
+                            </h3>
+                            <h4>{{ project.description }}</h4>
+                            <br/>
+                        </div> <!--panel-heading -->
+                    </div> <!-- panel panel-primary -->
+                {% endfor %}
+
+            </div> <!-- col-md-9 -->
+            <div class="col-md-3">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Add New Project</h3>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-striped">
+                            <tbody>
+                            <tr>
+                                <form action="." method="post">
+                                    {% csrf_token %}
+                                    {% for field in form %}
+                                        {{ field }}
+                                        <br>
+                                    {% endfor %}
                                     <div class="form-group">
-                                        <input type="task" class="form-control new-task" placeholder="Project Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="task" class="form-control new-task" placeholder="Description">
-                                    </div>
-                                    <div class="form-group">
-                                        <button id="new-task-button" type="submit" class="btn btn-success btn-block"><i
+                                        <button id="new-task-button" type="submit"
+                                                class="btn btn-success btn-block"><i
                                                 id="plus-icon" class="fa fa-plus"></i></button>
                                     </div>
-                                </td>
-                            </form>
-                        </tr>
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                        </tr>
-                        </tfoot>
-                    </table>
-                    <div id="duplicate-msg" class="alert alert-danger" role="alert">
-                        <p>You've already entered this.</p>
+                                </form>
+                            </tr>
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                            </tr>
+                            </tfoot>
+                        </table>
+
+                        <!-- Errors -->
+                        {% if form.errors %}
+                            <div id="empty-msg" class="alert alert-danger" role="alert">
+                                <p>{{ form.errors }}</p>
+                            </div>
+                        {% endif %}
+                        <!-- Messages -->
+                        {% for message in messages %}
+                            <div id="empty-msg" class="alert alert-danger" role="alert">
+                                <p>{{ message }}</p>
+                            </div>
+                        {% endfor %}
+
+                    </div> <!-- end panel-body -->
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Projects Name</h3>
+                        <br>
+                        {% for project in projects %}
+                            <a href="{{ project.get_absolute_url }}">
+                                <div>{{ project.title }}</div>
+                            </a>
+                        {% endfor %}
                     </div>
-                    <div id="empty-msg" class="alert alert-danger" role="alert">
-                        <p>Please enter a new task.</p>
-                    </div>
-                </div> <!-- end panel-body -->
-                <div class="panel-heading">
-                    <h3 class="panel-title">Project Name</h3>
-                </div>
-            </div> <!-- end panel panel-primary -->
-        </div> <!-- end col-md-3 -->
-    </div> <!-- end row -->
-</main>
+                </div> <!-- end panel panel-primary -->
+            </div> <!-- end col-md-3 -->
+        </div> <!-- end row -->
+    </main>
 {% endblock %}
 
 <footer id="footer" class="navbar navbar-inverse navbar-fixed-bottom">
@@ -142,7 +119,7 @@
                 <table class="table table-striped">
                     <tbody>
                     <tr>
-                        <form id="form">
+                        <form id="form" action="." method="post">
                             <td>
                                 <div class="form-group">
                                     <input type="task" class="form-control new-task" placeholder="Task Name">
