--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
 
                     </div> <!-- end panel-body -->
                     <div class="panel-heading">
-                        <h3 class="panel-title">Projects Name</h3>
+                        <h3 class="panel-title">Projects</h3>
                         <br>
                         {% for project in projects %}
                             <a href="{{ project.get_absolute_url }}">
