--- a/core/templates/task_delete.html
+++ b/core/templates/task_delete.html
@@ -17,7 +17,7 @@
                     <div class="col-lg-6 offset-lg-3">
                         <div class="post_comment">
                             <div class="contact_form_container">
-                                <div>
+                                <div class="container text-center">
                                     <form action="" method="post">
                                         {% csrf_token %}
                                         <h1>Are you sure you want to delete <b>{{ task.title|title }}</b> task?</h1>
