--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    {% block title %}
-        <title>ToDo</title>
-    {% endblock %}
+
+    <title>
+        {% block title %}
+            ToDo
+        {% endblock %}
+    </title>
+
 
     <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.5/slate/bootstrap.min.css">
